--- a/templates/index.html
+++ b/templates/index.html
@@ -116,6 +116,9 @@
 		    <input type="image" id="cmg7" class="CMg leftmargin" title="7" src="static/fig/7-icon.png" alt="set8">
 		    <input type="image" id="cmg8" class="CMg leftmargin" title="8" src="static/fig/8-icon.png" alt="set8">	
 		  </div>
+		   <div id="toolbox-download">
+		    <input type="image" id="download-input" title="Download" src="static/fig/download-icon.png" alt="Download all information">
+		  </div>
 		</div>
 	      </div>
 	    </div>
